Changes in 0.50.8:
  * NormalizeInterpreterPaths() policy now looks in the package currently
    being built, as well as on the installed system, to determine how to
    resolve #!/usr/bin/env scripts.
  * groupName argument to addTrove() can now be a list of group names as
    well as a single group name.

Changes in 0.50.7:
  * Added the XInetdService action to avoid having to include
    /etc/xinetd.d/ files separately, and to make xinetd.d files
    be consistent, making recipe-provided changes less likely to
    conflict with local configuration changes.
  * groups are no longer allowed to contain redirects
  * added setLabelPath to group recipe
  * Allow r.Provides("soname: libfoo.so(FLAGS)", "/some/file") (added
    the "(FLAGS)" part).
  * don't allow spaces and commas in revisions

Changes in 0.50.6:
  * conaryclient.updateChangeSet should have recursed by default
  * Metadata retrieval now works along distributed branches and shadows.
  * reworked troves being added to database to handle missing parts
    of packages and groups properly (and make things faster and more
    elegant)
  * merged update and erase code paths in conaryclient
  * update and erase now take +,- modifiers on trove names
  * added --info to see what an update or erase command will do
  * a single group recipe can now build multiple groups

Changes in 0.50.5:
  * Streams return their value through __call__ instead of value()
  * Reimplemented ShortStream and IntStream in C
  * conary config now takes --show-passwords option, and does not pretty
    print config file values when not printing to screen.  This means that 
    conary config > <file> will result in a valid configuration file.
  * Updating groups didn't work when the group referenced troves as new
    which were already installed on the system
  * r.ComponentSpec('somecomponent', '.*') will no longer override the
    file specifications for packaging :debuginfo and :test components.